[project]
name = "flask-secure-session"
version = "0.1.0"
description = ""
authors = [
    {name = "Athanasios Leonis"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask >=3.1.1,<4.0.0",
    "flask-login >=0.6.3,<0.7.0",
    "flask-bcrypt >=1.0.1,<2.0.0",
    "flask-wtf >=1.2.2,<2.0.0",
    "flask-migrate >=4.1.0,<5.0.0",
    "flask-sqlalchemy >=3.1.1,<4.0.0",
    "pyotp >=2.9.0,<3.0.0",
    "qrcode >=8.2,<9.0",
    "python-decouple >=3.8,<4.0"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
